--- a/src/components/outils/CategorySimulator.module.css
+++ b/src/components/outils/CategorySimulator.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
 }
 
 .equivalent {
@@ -36,6 +37,12 @@
 
   &:focus:not(:focus-visible) {
     outline: none;
+  }
+}
+
+.noFirst {
+  &:first-child {
+    border-radius: 0;
   }
 }
 
