--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -13,7 +13,7 @@
   padding: 0.75rem 1rem;
   font-size: 1rem;
   line-height: 1.5rem;
-  min-height: 3rem;
+  height: 3.25rem;
   position: relative;
   width: 100%;
 
