--- a/src/components/examples/Example.module.css
+++ b/src/components/examples/Example.module.css
@@ -1,3 +1,4 @@
+.link,
 .example {
   flex: 1;
   min-width: calc((100% - 1.5rem) / 3);
@@ -21,7 +22,6 @@
 
 .image {
   width: 100%;
-  margin-bottom: 1rem;
   height: auto;
 }
 
@@ -29,4 +29,24 @@
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
+.link {
+  &:hover {
+    border-color: var(--primary-30);
+  }
+
+  &:active {
+    border-color: var(--neutral-30);
+  }
+
+  &:focus {
+    outline: 3px solid var(--primary-40);
+    outline-offset: 2px;
+  }
+
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 }
