--- a/src/components/contact/Form.module.css
+++ b/src/components/contact/Form.module.css
@@ -23,3 +23,28 @@
 .separator {
   border-bottom: 2px solid var(--neutral-20);
 }
+
+.checkbox {
+  label {
+    color: var(--neutral-60);
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+  }
+
+  a {
+    font-size: 0.875rem !important;
+    font-weight: 500 !important;
+    line-height: 1.25rem !important;
+
+    color: var(--primary-60) !important;
+
+    &:hover {
+      color: var(--primary-70) !important;
+    }
+  }
+
+  input {
+    flex-grow: 1;
+  }
+}
