--- a/src/components/outils/CategorySimulator.module.css
+++ b/src/components/outils/CategorySimulator.module.css
@@ -3,11 +3,7 @@
 }
 
 .equivalent {
-  padding: 1rem 1.5rem;
-  display: flex;
-  gap: 1.5rem;
-  text-decoration: none;
-  color: var(--neutral-70);
+  position: relative;
 
   &:first-child {
     border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
@@ -16,6 +12,20 @@
   &:not(:last-child) {
     border-bottom: 2px solid var(--primary-30);
   }
+}
+
+.noFirst {
+  &:first-child {
+    border-radius: 0;
+  }
+}
+
+.link {
+  display: flex;
+  gap: 1.5rem;
+  text-decoration: none;
+  color: var(--neutral-70);
+  padding: 1rem 1.5rem;
 
   &:focus,
   &:hover {
@@ -37,12 +47,6 @@
 
   &:focus:not(:focus-visible) {
     outline: none;
-  }
-}
-
-.noFirst {
-  &:first-child {
-    border-radius: 0;
   }
 }
 
@@ -132,5 +136,55 @@
     border-radius: 0;
     border: none;
     border-top: 2px solid var(--primary-30);
+  }
+}
+
+.carpool {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  display: flex;
+  gap: 0.5rem;
+
+  @media screen and (max-width: 48rem) {
+    position: relative;
+    width: 100%;
+    background-color: var(--primary-10);
+    justify-content: center;
+    padding: 0.5rem 1.5rem;
+    top: 0;
+    right: 0;
+  }
+}
+
+.conducteur {
+  border-radius: 0.25rem;
+  background-color: var(--primary-10);
+  border: 2px solid var(--primary-30);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2rem;
+  width: 2rem;
+  line-height: 1;
+
+  @media screen and (max-width: 48rem) {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+}
+
+.triangle {
+  display: none;
+  position: absolute;
+  top: -0.625rem;
+  width: 0;
+  height: 0;
+  border-left: 0.625rem solid transparent;
+  border-right: 0.625rem solid transparent;
+  border-bottom: 0.625rem solid var(--primary-10);
+
+  @media screen and (max-width: 48rem) {
+    display: block;
   }
 }
