--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -3,6 +3,7 @@
   position: relative;
   font-size: initial !important;
   border-radius: 8px !important;
+  overflow: hidden;
   border: 2px solid var(--primary-30) !important;
   display: flex !important;
   width: fit-content !important;
@@ -18,7 +19,6 @@
 .top {
   display: flex !important;
   align-items: stretch !important;
-  border-radius: 8px 0 0 8px !important;
   gap: 0.75em !important;
   background-color: var(--primary-10) !important;
   color: var(--primary-70) !important;
@@ -29,7 +29,6 @@
 }
 
 .top {
-  border-radius: 8px 8px 0 0 !important;
   border-bottom: 2px solid var(--primary-30) !important;
 }
 
@@ -41,7 +40,6 @@
 .rightColumn,
 .right {
   position: relative !important;
-  border-radius: 0 8px 8px 0 !important;
   background-color: var(--neutral-00) !important;
   color: var(--neutral-50) !important;
 }
