--- a/src/views/Page.module.css
+++ b/src/views/Page.module.css
@@ -16,4 +16,14 @@
   ul {
     margin-left: 2rem;
   }
+
+  table {
+    margin-top: 1rem;
+    border: 1px solid var(--neutral-80);
+  }
+
+  th, td {
+    border: 1px solid var(--neutral-80);
+    padding: 0.5rem;
+  }
 }
