--- a/src/components/externalModules/SimpleValue.module.css
+++ b/src/components/externalModules/SimpleValue.module.css
@@ -14,6 +14,8 @@
   img {
     margin: 0 !important;
     max-width: unset !important;
+    height: 3em !important;
+    width: 3em !important;
   }
 }
 
