--- a/src/components/outils/CategorySimulator.module.css
+++ b/src/components/outils/CategorySimulator.module.css
@@ -85,13 +85,11 @@
 .halfBar {
   height: calc(1rem - 4px);
   border-radius: 1rem 0 0 1rem;
-  background-image: repeating-linear-gradient(
-    -45deg,
-    var(--primary-10),
-    var(--primary-10) 2px,
-    var(--primary-20) 2px,
-    var(--primary-20) 4px
-  );
+  background-image: repeating-linear-gradient(-45deg,
+      var(--primary-10),
+      var(--primary-10) 2px,
+      var(--primary-20) 2px,
+      var(--primary-20) 4px);
 }
 
 .construction,
@@ -122,15 +120,18 @@
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.04);
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.75rem 2rem;
 
-  > div {
+  >div {
     display: flex;
     align-items: center;
   }
 
   @media screen and (max-width: 48rem) {
     padding: 1.25rem 1rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     position: relative;
     top: 0;
     right: 0;
@@ -138,6 +139,19 @@
     border: none;
     border-top: 2px solid var(--primary-30);
   }
+}
+
+.legendRelative {
+  padding: 1.25rem 1rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+  top: 0;
+  right: 0;
+  border-radius: 0;
+  border: none;
+  border-top: 2px solid var(--primary-30);
 }
 
 .carpool {
