--- a/shopify/extensions/equivalent-carbone/blocks/empreinte.liquid
+++ b/shopify/extensions/equivalent-carbone/blocks/empreinte.liquid
@@ -460,7 +460,7 @@
   },
   {
     "value": "mangue",
-    "label": "Mangue (Importée par avion)"
+    "label": "Mangue"
   },
   {
     "value": "manteau",
