--- a/src/components/outils/TransportSimulator.module.css
+++ b/src/components/outils/TransportSimulator.module.css
@@ -20,9 +20,19 @@
   &:last-child {
     border-radius: 0 calc(1rem - 2px) 0 0;
   }
+
+  &:focus {
+    outline-offset: 2px;
+    outline: 3px solid var(--primary-40);
+  }
+
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 }
 
 .selectedTab {
+  cursor: default;
   color: var(--neutral-80);
   background: var(--neutral-00);
   margin-top: -2px;
