--- a/src/components/outils/plusMinus/PlusMinus.module.css
+++ b/src/components/outils/plusMinus/PlusMinus.module.css
@@ -59,9 +59,11 @@
 }
 
 .mainButton {
+  flex: 1;
   height: 2rem;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   color: var(--primary-60);
   font-size: 0.75rem;
