--- a/src/components/outils/equivalents/detail/Detail.module.css
+++ b/src/components/outils/equivalents/detail/Detail.module.css
@@ -37,7 +37,7 @@
 
 .icon {
   padding: 0.25rem;
-  margin: 0 0.5rem -0.5rem 0;
+  margin: 0 0.5rem 0 0;
   height: 2rem;
   width: 2rem;
   border-radius: 0.5rem;
@@ -107,4 +107,9 @@
 
 .noBorder {
   border-top: none !important;
+}
+
+.withIcon {
+  display: flex;
+  align-items: center;
 }
