--- a/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
+++ b/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
@@ -8,7 +8,7 @@
   gap: 1rem;
   flex-wrap: wrap-reverse;
 
-  > div {
+  >div {
     flex: 1;
   }
 
@@ -29,13 +29,25 @@
   overflow: auto;
 }
 
+.footerCenter,
 .footer {
-  margin: 0 -1.5rem -2rem -1.5rem;
   padding: 1rem 2rem;
   border-radius: 0px 0px calc(1rem - 2px) calc(1rem - 2px);
   border-top: 2px solid var(--primary-20);
   background: var(--primary-10);
   display: flex;
+  margin: 0 -1.5rem -2rem -1.5rem;
+
+  @media screen and (max-width: 29.875rem) {
+    margin: 0rem -1rem -2rem -1rem;
+  }
+}
+
+.footerCenter {
+  justify-content: center;
+}
+
+.footer {
   flex-wrap: wrap;
   align-items: center;
   gap: 0.5rem 0;
@@ -56,10 +68,6 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
-  }
-
-  @media screen and (max-width: 29.875rem) {
-    margin: 0rem -1rem -2rem -1rem;
   }
 }
 
