--- a/src/components/outils/TransportComparisonEquivalent.module.css
+++ b/src/components/outils/TransportComparisonEquivalent.module.css
@@ -20,6 +20,14 @@
   }
 }
 
+.top {
+  flex: 1;
+  display: flex;
+  gap: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+}
+
 .impact {
   color: var(--primary-50);
   font-weight: 700;
