--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -54,8 +54,11 @@
 }
 
 .logos {
+  position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
   padding: 0.75rem 1.5rem;
   border-top: 2px solid var(--primary-30);
 }
@@ -167,5 +170,32 @@
 
   @media screen and (max-width: 29.875rem) {
     padding: 1.5rem 1rem;
+  }
+}
+
+.bottomLanguage,
+.language {
+  position: relative;
+
+  select {
+    padding-left: 2.5rem;
+  }
+
+  svg {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+  }
+}
+
+.language {
+  position: absolute;
+  left: 1.5rem;
+  top: 1.125rem;
+
+  @media screen and (max-width: 48rem) {
+    position: relative;
+    top: unset;
+    left: unset;
   }
 }
