--- a/src/components/outils/TransportComparisonMode.module.css
+++ b/src/components/outils/TransportComparisonMode.module.css
@@ -43,8 +43,7 @@
   font-weight: 500;
   line-height: 1.25rem;
 
-  &:focus,
-  &:focus:not(:focus-visible) {
+  &:focus {
     outline: none;
   }
 }
@@ -70,11 +69,6 @@
   }
 
   &:focus {
-    outline-offset: 2px;
     outline: 3px solid var(--primary-40);
-  }
-
-  &:focus:not(:focus-visible) {
-    outline: none;
   }
 }
