--- a/src/components/form/CheckboxInput.module.css
+++ b/src/components/form/CheckboxInput.module.css
@@ -50,6 +50,15 @@
     outline: 4px solid var(--primary-30);
     outline-offset: 0;
   }
+
+  input[type='checkbox']:disabled {
+    border-color: var(--neutral-20);
+  }
+
+  input[type='checkbox']:disabled:checked {
+    color: var(--neutral-30);
+    background-color: var(--neutral-10);
+  }
 }
 
 .reversed {
@@ -78,4 +87,8 @@
 
 .checkReversed {
   right: 0.5rem;
+}
+
+.checkDisabled {
+  color: var(--neutral-30);
 }
