add a disabled state

--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -38,6 +38,10 @@
   cursor: pointer;
   appearance: none;
   padding-right: 2rem;
+
+  &:disabled {
+    cursor: default;
+  }
 }
 
 .selectWrapper {
