--- a/src/components/Notion/Notion.module.css
+++ b/src/components/Notion/Notion.module.css
@@ -70,6 +70,25 @@
     font-weight: 500;
     line-height: 1.25rem;
   }
+
+  :global(.notion-hash-link) {
+    &:focus {
+      opacity: 1;
+    }
+  }
+
+  :global(summary),
+  :global(.notion-link),
+  :global(.notion-hash-link) {
+    &:focus {
+      outline-offset: 2px;
+      outline: 3px solid var(--primary-40);
+    }
+
+    &:focus:not(:focus-visible) {
+      outline: none;
+    }
+  }
 }
 
 .buttonRef {
