review with Gauthier

--- a/src/components/externalModules/detection/Detector.module.css
+++ b/src/components/externalModules/detection/Detector.module.css
@@ -1,3 +1,8 @@
+.hidden {
+  position: absolute;
+  left: -99999px;
+}
+
 .container {
   position: relative !important;
   display: inline !important;
