--- a/src/components/examples/Example.module.css
+++ b/src/components/examples/Example.module.css
@@ -1,13 +1,8 @@
-.link,
-.example {
+.list {
   flex: 1;
+  height: auto;
   min-width: calc((100% - 1.5rem) / 3);
   max-width: calc((100% - 1.5rem) / 3);
-  padding: 1.5rem;
-  border-radius: 0.75rem;
-  border: 2px solid var(--neutral-20);
-  box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.04);
-  text-decoration: none;
 
   @media only screen and (max-width: 53rem) {
     min-width: calc((100% - 0.75rem) / 2);
@@ -18,6 +13,17 @@
     min-width: 100%;
     max-width: 100%;
   }
+}
+
+.link,
+.example {
+  display: block;
+  height: 100%;
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+  border: 2px solid var(--neutral-20);
+  box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.04);
+  text-decoration: none;
 }
 
 .image {
