--- a/src/components/shareable/overScreens/TransportListParam.module.css
+++ b/src/components/shareable/overScreens/TransportListParam.module.css
@@ -5,12 +5,19 @@
   margin-top: 1.25rem;
 }
 
+.list {
+  width: calc(50% - 0.25rem);
+
+  @media screen and (max-width: 48rem) {
+    width: 100%;
+  }
+}
+
 .mode {
   opacity: 0.6;
   border-radius: 0.5rem;
   border: 2px solid var(--neutral-30);
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.04);
-  width: calc(50% - 0.25rem);
   padding-right: 1.25rem;
 
   label {
@@ -20,10 +27,6 @@
   &:hover {
     border: 2px solid var(--primary-30);
     background: var(--primary-10);
-  }
-
-  @media screen and (max-width: 48rem) {
-    width: 100%;
   }
 }
 
