--- a/src/components/externalModules/shopify/Progress.module.css
+++ b/src/components/externalModules/shopify/Progress.module.css
@@ -6,19 +6,23 @@
 
 .button {
   position: absolute;
-  right: 0.25rem;
-  top: 0.25rem;
+  background-color: transparent;
+  right: 1.875rem;
+  top: 0;
   cursor: pointer;
-  display: flex;
   padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  border-radius: 0rem 0rem 0rem 0.5rem;
   color: var(--neutral-50);
+  border-bottom: 2px solid var(--neutral-20);
+  border-left: 2px solid var(--neutral-20);
+  line-height: 1;
+  height: 1.375rem;
   font-size: 0.75rem;
-  font-weight: 500;
-  line-height: 1rem;
+
+  svg {
+    width: 0.75rem;
+    height: 0.75rem;
+  }
 
   &:hover {
     background: var(--primary-10);
