--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -199,3 +199,10 @@
     left: unset;
   }
 }
+
+.disclaimer {
+  text-align: center;
+  padding: 0.75rem 1.5rem;
+  border-top: 2px solid var(--primary-30);
+  color: var(--neutral-50);
+}
