--- a/src/components/base/buttons/DefaultButton.module.css
+++ b/src/components/base/buttons/DefaultButton.module.css
@@ -1,24 +1,57 @@
-.defaultButton {
+.label {
+  position: relative;
+  z-index: 1;
   display: flex;
   padding: 0.25rem 0.5rem;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+  background: var(--primary-10);
   border-radius: 0.25rem;
+}
+
+.defaultButton {
+  position: relative;
   font-size: 0.75rem;
   font-weight: 500;
   line-height: 1rem;
   cursor: default;
-  background: var(--primary-10);
   color: var(--primary-60);
+  height: 1.5rem;
 
   svg {
     height: 0.75rem;
     width: 0.75rem;
   }
 
-  &:focus {
-    outline: none;
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    &:focus {
+      outline: none;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        outline: 3px solid var(--primary-40);
+        outline-offset: 4px;
+        border-radius: 0.5rem;
+      }
+    }
+
+    &:focus:not(:focus-visible) {
+      &:before {
+        outline: none;
+      }
+    }
   }
 }
 
