--- a/src/components/form/addresses/Suggestions.module.css
+++ b/src/components/form/addresses/Suggestions.module.css
@@ -3,7 +3,9 @@
   border-radius: 0 0 1.375rem 1.375rem;
   max-height: 20rem;
   overflow-y: auto;
-  position: relative;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
 }
 
 .suggestion {
