--- a/src/components/outils/TransportComparisonMode.module.css
+++ b/src/components/outils/TransportComparisonMode.module.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   padding: 0.75rem 1.5rem;
-  justify-content: space-between;
+  gap: 0.5rem;
+  justify-content: center;
   align-items: center;
   background: var(--primary-10);
   color: var(--primary-70);
@@ -33,28 +34,60 @@
 
 .leftButton,
 .rightButton {
+  position: relative;
   color: var(--primary-70);
-  background-color: var(--primary-20);
-  display: flex;
-  padding: 0.5rem 1rem;
-  align-items: center;
-  gap: 0.5rem;
   font-size: 0.875rem;
   font-weight: 500;
   line-height: 1.25rem;
 
-  &:focus {
-    outline: none;
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    &:focus {
+      outline: none;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        outline: 3px solid var(--primary-40);
+        outline-offset: 4px;
+        border-radius: 0.5rem;
+      }
+    }
+
+    &:focus:not(:focus-visible) {
+      &:before {
+        outline: none;
+      }
+    }
   }
 }
 
-.leftButton {
+.leftLabel,
+.rightLabel {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  background-color: var(--primary-20);
+  padding: 0.5rem 1rem;
+}
+
+.leftLabel {
   border-radius: calc(0.5rem - 2px) 0 0 calc(0.5rem - 2px);
   border-right: 2px solid var(--primary-30);
 }
 
-.rightButton {
-
+.rightLabel {
   border-radius: 0 calc(0.5rem - 2px) calc(0.5rem - 2px) 0;
 }
 
@@ -66,9 +99,5 @@
   &:hover {
     background-color: var(--neutral-00);
     color: var(--primary-70);
-  }
-
-  &:focus {
-    outline: 3px solid var(--primary-40);
   }
 }
