feat: Add connect iframe loader

--- a/src/components/connect/IframeConnect.module.css
+++ b/src/components/connect/IframeConnect.module.css
@@ -1,3 +1,13 @@
 .iframe {
   width: 100%;
 }
+
+.hidden {
+  display: none;
+}
+
+.loading {
+  color: var(--primary-50);
+  display: flex;
+  gap: 0.5rem;
+}
