--- a/src/components/base/Logo/Logos.module.css
+++ b/src/components/base/Logo/Logos.module.css
@@ -1,22 +1,43 @@
 .logos {
   border-radius: 0.5rem;
+  position: relative;
   text-decoration: none;
   display: flex;
   gap: 1.75rem;
   padding: 0.75rem;
   align-items: center;
 
-  &:hover {
-    background-color: var(--neutral-10);
-  }
-
-  &:focus {
-    color: var(--primary-70);
-  }
-
   @media screen and (max-width: 29.875rem) {
     padding: 0.5rem 0.75rem;
     gap: 1rem;
+  }
+
+  &:hover {
+    background-color: var(--neutral-10);
+  }
+}
+
+.link {
+  &::before {
+    content: "";
+    border-radius: 0.5rem;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  &:focus {
+    outline: none;
+
+    &::before {
+      outline: 3px solid var(--primary-40);
+    }
   }
 }
 
