--- a/src/components/breadcrumbs/Breadcrumbs.module.css
+++ b/src/components/breadcrumbs/Breadcrumbs.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   gap: 0.5rem;
   padding: 1rem 0.75rem;
+  list-style: none;
 
   svg {
     color: var(--neutral-40);
@@ -17,6 +18,13 @@
   color: var(--neutral-60);
   width: max-content;
   font-weight: 500;
+}
+
+.li {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .link {
