--- a/src/components/comparateur/Tiles.module.css
+++ b/src/components/comparateur/Tiles.module.css
@@ -20,6 +20,10 @@
   justify-content: center;
   align-items: center;
   position: relative;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .background {
