--- a/src/components/faq/FAQ.module.css
+++ b/src/components/faq/FAQ.module.css
@@ -21,7 +21,7 @@
   :global(.notion-link) {
     color: var(--primary-50);
     font-weight: 500;
-    text-decoration: none;
+    text-decoration: underline;
     border: none;
     opacity: 1;
 
