--- a/src/components/faq/FAQsList.module.css
+++ b/src/components/faq/FAQsList.module.css
@@ -1,5 +1,8 @@
-.footer {
+.footerTop {
   margin-top: 1.25rem;
+}
+
+.footer {
   color: var(--neutral-50);
   display: flex;
   align-items: center;
