--- a/src/components/outils/TransportComparisonMode.module.css
+++ b/src/components/outils/TransportComparisonMode.module.css
@@ -57,15 +57,35 @@
         left: 0;
         width: 100%;
         height: 100%;
-        outline: 3px solid var(--primary-40);
+        outline: 2px solid var(--primary-50);
         outline-offset: 4px;
-        border-radius: 0.5rem;
+        z-index: 2;
       }
     }
 
     &:focus:not(:focus-visible) {
       &:before {
         outline: none;
+      }
+    }
+  }
+}
+
+.leftButton {
+  input {
+    &:focus {
+      &:before {
+        border-radius: calc(0.5rem - 2px) 0 0 calc(0.5rem - 2px);
+      }
+    }
+  }
+}
+
+.rightButton {
+  input {
+    &:focus {
+      &:before {
+        border-radius: 0 calc(0.5rem - 2px) calc(0.5rem - 2px) 0;
       }
     }
   }
