--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -18,7 +18,7 @@
 .secondaryContainer {
   border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   gap: 1.5rem;
   justify-content: center;
@@ -31,6 +31,7 @@
 .secondaryText {
   color: var(--neutral-60);
   font-size: 0.875rem;
+  font-weight: 400;
   line-height: 1.25rem;
 }
 
@@ -205,4 +206,9 @@
   padding: 0.75rem 1.5rem;
   border-top: 2px solid var(--primary-30);
   color: var(--neutral-50);
+}
+
+.hiddenTitle {
+  left: -99999px;
+  position: absolute;
 }
