WIP on fix/accessibilit

--- a/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
+++ b/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
@@ -23,10 +23,9 @@
 
 .content {
   margin: 0 -1.5rem;
-  height: calc(100% - 6rem - 5px);
+  height: calc(100% - 8rem);
   overflow: auto;
   padding: 2rem;
-  overflow: auto;
 }
 
 .footerCenter,
