--- a/src/components/shareable/overScreens/CustomParam.module.css
+++ b/src/components/shareable/overScreens/CustomParam.module.css
@@ -10,7 +10,10 @@
   flex-wrap: wrap;
   gap: 1rem 2rem;
   justify-content: space-between;
-  margin-bottom: 2rem;
+
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
 }
 
 .inputContainer {
@@ -39,7 +42,7 @@
   margin-top: 1rem;
   min-width: 100%;
 
-  > div {
+  >div {
     flex: 1;
     min-width: 300px;
   }
