--- a/src/components/cards/ToolCard.module.css
+++ b/src/components/cards/ToolCard.module.css
@@ -130,7 +130,7 @@
   svg {
     padding-left: 0.5rem;
     transition: padding 0.3s ease-in-out;
-    width: fit-content;
+    width: auto;
   }
 }
 
