chore: remove notion caption

--- a/src/components/Notion/Notion.module.css
+++ b/src/components/Notion/Notion.module.css
@@ -21,6 +21,10 @@
     margin: 0 !important;
   }
 
+  :global(.notion-asset-caption) {
+    display: none;
+  }
+
   :global(.notion-title) {
     color: var(--neutral-80);
     font-weight: 700;
