--- a/src/components/faq/FAQ.module.css
+++ b/src/components/faq/FAQ.module.css
@@ -53,6 +53,10 @@
   :global(.notion-asset-caption) {
     display: none;
   }
+
+  :global(.notion-inline-code) {
+    color: #D70D0C;
+  }
 }
 
 .button {
