--- a/src/components/outils/CategorySimulator.module.css
+++ b/src/components/outils/CategorySimulator.module.css
@@ -76,11 +76,13 @@
 .halfBar {
   height: calc(1rem - 4px);
   border-radius: 1rem 0 0 1rem;
-  background-image: repeating-linear-gradient(-45deg,
-      var(--neutral-00),
-      var(--neutral-00) 2px,
-      var(--primary-20) 2px,
-      var(--primary-20) 4px);
+  background-image: repeating-linear-gradient(
+    -45deg,
+    var(--neutral-00),
+    var(--neutral-00) 2px,
+    var(--primary-20) 2px,
+    var(--primary-20) 4px
+  );
 }
 
 .construction,
@@ -113,7 +115,7 @@
   flex-direction: column;
   gap: 0.75rem 2rem;
 
-  >div {
+  > div {
     display: flex;
     align-items: center;
   }
