fix: ui font-size

--- a/src/utils/styles.css
+++ b/src/utils/styles.css
@@ -87,6 +87,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
+  font-size: 1rem;
   font-family: 'Marianne', Arial, sans-serif;
   vertical-align: baseline;
 }
