--- a/src/components/outils/alimentation/AlimentationSubCategory.module.css
+++ b/src/components/outils/alimentation/AlimentationSubCategory.module.css
@@ -15,7 +15,7 @@
   font-weight: 700;
   line-height: 1.75rem;
   display: flex;
-  gap: 1.5rem;
+  gap: 0.75rem 1.5rem;
   align-items: center;
 
   &:hover {
@@ -38,11 +38,20 @@
     border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
     border-bottom: 2px solid var(--primary-30);
   }
+
+  @media screen and (max-width: 29.875rem) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .info {
   flex: 1;
   text-align: left;
+  position: relative;
+  @media screen and (max-width: 29.875rem) {
+    width: 100%;
+  }
 }
 
 .displayedBar,
@@ -62,6 +71,20 @@
   background: var(--primary-20);
 }
 
+.barText {
+  color: var(--primary-60);
+  font-size: 0.75rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+  padding: 0 0.5rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0.25rem;
+  transform: translateX(-50%) translateY(50%);
+  background-color: var(--neutral-00);
+  width: max-content;
+}
+
 .hide {
   display: flex;
   align-items: center;
@@ -77,6 +100,10 @@
     width: 1rem;
     height: 1rem;
   }
+  @media screen and (max-width: 29.875rem) {
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 .icons {
@@ -84,6 +111,10 @@
   justify-content: flex-end;
   gap: 0.25rem;
   width: 11rem;
+
+  @media screen and (max-width: 29.875rem) {
+    justify-content: flex-start;
+  }
 }
 
 .icon {
