--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -174,6 +174,11 @@
   }
 }
 
+.withoutBorder {
+  border: none;
+  padding-top: 0.75rem;
+}
+
 .bottomLanguage,
 .language {
   position: relative;
