--- a/src/components/shareable/overScreens/Data/Data.module.css
+++ b/src/components/shareable/overScreens/Data/Data.module.css
@@ -62,6 +62,13 @@
   margin-bottom: 2rem;
 
   ul {
+    list-style: outside;
     margin-left: 1.5rem;
+
+    li {
+      &:not(:first-child) {
+        margin-top: 0.25rem;
+      }
+    }
   }
 }
