--- a/src/components/outils/AlimentationSimulator.module.css
+++ b/src/components/outils/AlimentationSimulator.module.css
@@ -2,6 +2,10 @@
   width: 100%;
   select {
     max-width: 100%;
+    color: var(--neutral-70) !important;
+    font-size: 1rem !important;
+    line-height: 1.5 !important;
+    font-weight: 500 !important;
   }
 }
 
@@ -11,7 +15,7 @@
   background-color: var(--primary-10);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .equivalents {
@@ -24,4 +28,6 @@
 .click {
   color: var(--primary-60);
   text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.125rem;
 }
