--- a/src/components/base/Resource.module.css
+++ b/src/components/base/Resource.module.css
@@ -22,9 +22,9 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.25rem;
   justify-content: center;
-  padding: 0.75rem;
+  padding: 1.125rem 1.5rem;
   text-align: left;
 }
 
@@ -46,12 +46,14 @@
 }
 
 .text {
-  font-size: 0.875rem;
+  color: var(--neutral-70);
+  font-size: 1.25rem;
   font-weight: 700;
-  line-height: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .fakeLink {
   color: var(--primary-50);
   font-weight: 500;
+  text-decoration: underline;
 }
