--- a/src/components/outils/AlimentationSimulator.module.css
+++ b/src/components/outils/AlimentationSimulator.module.css
@@ -16,6 +16,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 1rem;
+  }
 }
 
 .equivalents {
