--- a/src/components/outils/CategorySimulator.module.css
+++ b/src/components/outils/CategorySimulator.module.css
@@ -40,6 +40,14 @@
       color: var(--primary-70);
     }
   }
+
+  @media screen and (max-width: 29.875rem) {
+    gap: 1rem;
+    img {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+  }
 }
 
 .content {
