--- a/src/components/outils/alimentation/AlimentationSubCategory.module.css
+++ b/src/components/outils/alimentation/AlimentationSubCategory.module.css
@@ -43,7 +43,7 @@
   }
 
   &:not(:last-child) {
-    border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
+    border-radius: calc(0.5rem - 2px) calc(0.5rem - 2px) 0 0;
     border-bottom: 2px solid var(--primary-30);
   }
 
@@ -132,6 +132,10 @@
 
   @media screen and (max-width: 29.875rem) {
     justify-content: flex-start;
+    img {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
   }
 }
 
@@ -143,6 +147,9 @@
   height: 2.5rem;
   border-radius: 0.25rem;
   background-color: var(--neutral-10);
+  @media screen and (max-width: 29.875rem) {
+    height: 1.75rem;
+  }
 }
 
 .iconText {
@@ -153,7 +160,13 @@
   line-height: 1.25rem;
 }
 
+.more {
+  @media screen and (max-width: 29.875rem) {
+    display: none;
+  }
+}
+
 .categories {
   overflow: hidden;
-  border-radius: 0 0 calc(1rem - 2px) calc(1rem - 2px);
+  border-radius: 0 0 calc(0.5rem - 2px) calc(0.5rem - 2px);
 }
