--- a/src/components/Notion/Notion.module.css
+++ b/src/components/Notion/Notion.module.css
@@ -76,14 +76,11 @@
   }
 
   :global(.notion-hash-link) {
-    &:focus {
-      opacity: 1;
-    }
+    display: none;
   }
 
   :global(summary),
-  :global(.notion-link),
-  :global(.notion-hash-link) {
+  :global(.notion-link) {
     &:focus {
       outline-offset: 2px;
       outline: 3px solid var(--primary-40);
